<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-180dp"
        android:layout_marginTop="280dp"
        android:src="@drawable/backdrop" />

    <ImageView
        android:id="@+id/logovan"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_weight="0.10"
        android:src="@drawable/van" />


    <TextView
        android:id="@+id/appname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_weight="0.10"
        android:text="@string/login_maintext"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textFontWeight="800"
        android:textColor="@color/main"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="394dp"
        android:layout_height="60dp"
        android:width="35dp"
        android:background="@drawable/box_white"
        android:ems="10"
        android:hint="@string/login_edittext1"
        android:fontFamily="@font/montserrat_regular"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="@dimen/medium" />

    <EditText
        android:id="@+id/password"
        android:layout_width="394dp"
        android:layout_height="60dp"
        android:width="35dp"
        android:background="@drawable/box_white"
        android:fontFamily="@font/montserrat_regular"
        android:ems="10"
        android:hint="@string/login_edittext2"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="340dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="@dimen/medium" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="394dp"
        android:layout_height="60dp"
        android:width="35dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/login_bttext"
        android:background="@drawable/button_yellow"
        android:textColor="@color/white"
        android:layout_marginTop="420dp"
        android:textSize="@dimen/medium"
        android:layout_weight="0.1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="495dp"
        android:layout_weight="0.10"
        android:text="@string/login_text1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="394dp"
        android:layout_height="60dp"
        android:width="35dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_text2"
        android:background="@drawable/button_gray"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/white"
        android:layout_marginTop="540dp"
        android:textSize="@dimen/medium"
        android:layout_weight="0.1" />
</FrameLayout>